# studio54

./: --help  .audit.config.yaml  .audit_ignore.yaml  .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  STATE.md  pytest.ini
stack/broker/: Dockerfile  pyproject.toml
stack/broker/broker_service/: __init__.py  app.py
stack/broker/tests/: test_app.py
stack/control/: pyproject.toml
stack/control/control1215/: __init__.py  broker.py  cli.py  compose.py  hermes_grid.py  lifecycle.py  nodes.py  topology.py
stack/control/tests/: test_cli.py  test_hermes_grid.py  test_init_env.py  test_lifecycle.py
stack/services/hermes-gateway/: .gitignore  README.md  hermes-gateway.service.in  install.sh  pyproject.toml
stack/services/hermes-gateway/hermes_gateway/: __init__.py  app.py  broker.py  langfuse.py  spawn.py
stack/services/hermes-gateway/scripts/: seed_hermes_zero.sh  setup_ceo_profile.sh
stack/services/hermes-gateway/skills/continuity-plane/: README.md
stack/services/hermes-gateway/skills/continuity-plane/artifact-publish/: SKILL.md
stack/services/hermes-gateway/skills/continuity-plane/artifact-read/: SKILL.md
stack/services/hermes-gateway/skills/continuity-plane/broadcast-ack/: SKILL.md
stack/services/hermes-gateway/skills/continuity-plane/broadcast-publish/: SKILL.md
stack/services/hermes-gateway/skills/continuity-plane/broadcast-read-feed/: SKILL.md
stack/services/hermes-gateway/skills/hermes-zero/: README.md  _workspace.py
stack/services/hermes-gateway/skills/hermes-zero/append-file/: SKILL.md
stack/services/hermes-gateway/skills/hermes-zero/git-commit/: SKILL.md
stack/services/hermes-gateway/tests/: test_app.py  test_broker.py  test_langfuse.py  test_spawn.py
(+7314 files in other folders)
