[project]
name = "hermes-gateway"
version = "0.1.0"
description = "Host-side gateway that spawns Hermes runs on behalf of the Paperclip container through a user-owned UNIX domain socket."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "uvicorn[standard]>=0.30",
  "httpx>=0.28",
  "pydantic>=2.8",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.35",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hermes_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
